@@ -1,5 +1,9 @@
 2005-08-30  Michal Nazarewicz  (mina86/AT/tlen.pl)
 
+	* malloc.c: alloc() function added
+
+2005-08-30  Michal Nazarewicz  (mina86/AT/tlen.pl)
+
 	* mpd-show.c: New file
 	* Makefile, README: mpd-show added
 
